<resources>
    <string name="app_name">IntentRizal</string>
    <string name="move_activity">PINDAH AKTIVITI</string>
    <string name="move_with_data">PINDAH AKTIVITI DENGAN DATA</string>
    <string name="dial_number">PANGGIL TELEPON</string>
    <string name="move_with_result">PINDAH AKTIVITI UNTUK RESULT</string>
    <string name="result_from_activity">HASIL DARI AKTIVITI</string>
    <string name="chose_role">PILIH ROLE UTAMAMU</string>
    <string name="_assasin">Assasin</string>
    <string name="_tank">Tank</string>
    <string name="_marksman">MM</string>
    <string name="_mage">Mage</string>
    <string name="_fighter">Fighter</string>
    <string name="_suport">Suport</string>
    <string name="chose">PILIH</string>
    <string name="data_received">DATA DITERIMA</string>
    <string name="this_ismove_activity">INI PINDAH AKTIVITI</string>
    <string name="back_aktivity">KEMBALI AKTIVITI</string>
</resources>