<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chose_role"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textSize="30sp"
        android:gravity="center"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg_role"
        android:orientation="vertical" >
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_assasin"
            android:text="@string/_assasin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_tank"
            android:text="@string/_tank"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_marksman"
            android:text="@string/_marksman"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_mage"
            android:text="@string/_mage"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_fighter"
            android:text="@string/_fighter"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_chose"
        android:text="@string/chose"
        android:layout_margin="@dimen/activity_horizontal_margin"/>

</LinearLayout>